[package]
name = "struct_descriptor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[[bin]]
path = "src/main.rs"
name = "main"

[[test]]
name = "tests"
path = "tests/tests.rs"

[dependencies]
syn = { version = "2.0.25", features = ["derive", "extra-traits"] }
quote = "1.0.29"

[dev-dependencies]
trybuild = { version = "1.0.81", features = ["diff"] }
